# astmkit

./: .gitignore  README.md  astmkit.py  pyproject.toml
astmkit/: binary.py  cli.py  config.py  constants.py  encoder.py  hexdump.py  inst.py  io.py  parser.py
examples/: query.astm  results_basic.astm  results_multi_order.astm  results_with_comment.astm
tests/: test_parser.py
